adjust .hour-hand and .second-hand styles

--- a/style.css
+++ b/style.css
@@ -48,3 +48,12 @@ html {
     transition: all 0.05s;
     transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
   }
+
+  .hour-hand {
+      width: 40%;
+      right: 15rem;
+  }
+
+  .second-hand {
+    background: white;
+  }
